tests/snapshots/snapshot_test_assigned_view__assigned_view_all_items.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (5 items) | Filter: All────────────────────┐
│✓ Review Q2 planning doc []                               │
│✓ Fix bug in task filtering []                            │
│✓ Update API documentation []                             │
│💬  Please review this when you get a chance (in: Review Q2│
│💬  This is urgent, please prioritize (in: Fix bug in task │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
