tests/snapshots/snapshot_test_assigned_view__assigned_view_error.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me────────────────────────────────────────────┐
│Error: Failed to fetch assigned items                     │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
