tests/snapshots/snapshot_test_assigned_view__assigned_view_filter_tasks_only.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (5 items) | Filter: Tasks──────────────────┐
│✓ Review Q2 planning doc []                               │
│✓ Fix bug in task filtering []                            │
│✓ Update API documentation []                             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
