tests/snapshots/snapshot_test_assigned_view__assigned_view_large_count.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (10 items) | Filter: All───────────────────┐
│✓ Task 0 []                                               │
│✓ Task 1 []                                               │
│✓ Task 2 []                                               │
│✓ Task 3 []                                               │
│✓ Task 4 []                                               │
│✓ Task 5 []                                               │
│✓ Task 6 []                                               │
│✓ Task 7 []                                               │
│✓ Task 8 []                                               │
│✓ Task 9 []                                               │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
