tests/snapshots/snapshot_test_assigned_view__assigned_view_sorted_mixed_items.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (5 items) | Filter: All────────────────────┐
│💬  This is urgent, please prioritize (in: Fix bug in task │
│💬  Please review this when you get a chance (in: Review Q2│
│✓ Review Q2 planning doc []                               │
│✓ Fix bug in task filtering []                            │
│✓ Update API documentation []                             │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
