tests/snapshots/snapshot_test_assigned_view__assigned_view_visual_distinction.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (2 items) | Filter: All────────────────────┐
│✓ Task assigned to test user []                           │
│💬  Please review this when you get a chance (in: Review Q2│
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
