tests/snapshots/snapshot_test_assigned_view__assigned_view_with_api_comments.snap
---
source: tests/snapshot_test_assigned_view.rs
expression: snapshot
---
┌Assigned to Me (2 items) | Filter: Comments───────────────┐
│💬  Please review this when you get a chance (in: Review Q2│
│💬  This is urgent, please prioritize (in: Fix bug in task │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
│                                                          │
└──────────────────────────────────────────────────────────┘
